# Multimodal-Rag

./: README.md  app.py  logic.py  pyproject.toml  requirements.txt
