[project]
name = "multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "gradio>=6.1.0",
    "groq>=0.37.1",
    "numpy>=2.3.5",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=3.0,<4",
    "transformers>=4.41,<5",
]
